# TradingAI

./: .env.example  .gitignore  .vercelignore  AUDIT_REPORT.md  CLAUDE.md  DEPLOY.md  PHASE2_REPORT.md  README.md  RUNBOOK.md
.github/workflows/: ci.yml
apps/api/: CLAUDE.md  Dockerfile  fly.toml  pyproject.toml
apps/api/app/: __init__.py  auth.py  db.py  deps.py  logging_setup.py  main.py  middleware.py  settings.py
apps/api/app/agents/: analyst.py  llm_provider.py  projection.py  thesis_evaluator.py
apps/api/app/agents/prompts/: projection_v1.md  token_brief_v1.md  token_brief_v3.md
apps/api/app/backtest/: __init__.py  engine.py  metrics.py  report.py  strategies.py
apps/api/app/notifications/: telegram.py
apps/api/app/repositories/: ai_calls.py  alerts.py  audit.py  bot_decisions.py  briefs.py  daily_picks.py  gossip.py  invites.py  meter.py  options.py  paper.py  performance.py  rag.py  ta_snapshots.py  theses.py  user_profiles.py  users.py  wallets.py  watchlists.py
apps/api/app/routes/: _errors.py  activity.py  admin_health.py  alerts.py  auth.py  backtest.py  bot.py  correlation.py  ev.py  gossip.py  health.py  markets.py  me.py  meter.py  options.py  paper.py  performance.py  picks.py  portfolio.py  public_calibration.py  regime.py  signals.py  system.py  theses.py  tokens.py  track_record.py  wallets.py  watchlists.py
apps/api/app/services/: bot_decider.py  circuit_breaker.py  coingecko.py  coinglass.py  confluence.py  cvd.py  elliott.py  embeddings.py  ev_table.py  geopolitics.py  gossip.py  historical.py  indicators.py  levels.py  macro.py  meter.py  news.py  onchain.py  options.py  paper.py  patterns.py  patterns_advanced.py  performance.py  portfolio.py  predictor.py  rate_limit.py  regime.py  scoring.py  sector_indices.py  sentiment.py  ta_snapshot.py  wallet_tracker.py  weight_tuner.py  wyckoff.py
apps/api/app/workers/: alert_dispatcher.py  arq_main.py  backtest_evaluator.py  bot_decider.py  calibration_seeder.py  cvd_streamer.py  daily_digest.py  daily_morning.py  daily_picks.py  decision_points.py  gossip_poller.py  historical_backfill.py  meter_refresher.py  options_refresher.py  paper_evaluator.py  performance_daily.py  pick_outcome_evaluator.py  predictor_trainer.py  price_poller.py  setup_watcher.py  ta_snapshotter.py  thesis_tracker.py  wallet_poller.py  weight_tuner.py
apps/api/tests/: conftest.py  test_backtest.py  test_elliott_confluence.py  test_endpoint_smoke.py  test_ev_cvd.py  test_indicators.py  test_levels.py  test_meter.py  test_new_routes.py  test_options.py  test_paper.py  test_patterns.py  test_performance.py  test_predictor.py  test_regime.py  test_rls.py  test_routes.py  test_safety.py  test_ta_snapshot.py  test_wyckoff.py
apps/web/: CLAUDE.md  next.config.mjs  package-lock.json  package.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts  vercel.json  vitest.config.ts
apps/web/app/: error.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/app/about/: page.tsx
apps/web/app/alerts/: error.tsx  page.tsx
apps/web/app/backtest/: error.tsx  page.tsx
apps/web/app/compare/: error.tsx  page.tsx
apps/web/app/ev/: error.tsx  page.tsx
apps/web/app/gossip/: error.tsx  page.tsx
apps/web/app/login/: page.tsx
apps/web/app/options/: page.tsx
apps/web/app/paper/: page.tsx
apps/web/app/performance/: page.tsx
apps/web/app/picks/: error.tsx  page.tsx
apps/web/app/portfolio/: error.tsx  page.tsx
apps/web/app/settings/: error.tsx  page.tsx
apps/web/app/signals/: error.tsx  page.tsx
apps/web/app/thesis/: error.tsx  page.tsx
apps/web/app/token/: error.tsx
apps/web/app/track-record/: page.tsx
apps/web/components/: ActivityFeed.tsx  AlignmentBadge.tsx  AnalogsBadge.tsx  AuthErrorCard.tsx  BotVerdictCard.tsx  BriefView.tsx  CalibrationHero.tsx  DashboardCustomizer.tsx  Disclaimer.tsx  Glossary.tsx  HealthIndicator.tsx  KeyboardShortcuts.tsx  Markdown.tsx  MeterCard.tsx  MiniMeter.tsx  MobileNav.tsx  PaperTradeButton.tsx  PatternChart.tsx  PrefsBootstrap.tsx  PublicCalibrationSection.tsx  RegimeBadge.tsx  RiskProfileSection.tsx  RouteError.tsx  SectorTile.tsx  ServiceWorkerRegister.tsx  ShareBrief.tsx  Skeleton.tsx  TAPanel.tsx  ThemeApplier.tsx  TokenCard.tsx  TopLoader.tsx  TradeMeter.tsx  TradePlanCard.tsx  TradingViewWidget.tsx  UserMenu.tsx
apps/web/lib/: api.ts  api.ts.bak  auth.ts  format.ts  prefs.ts  supabase.ts
apps/web/public/: manifest.json  sw.js
apps/web/tests/: Disclaimer.test.tsx  a11y.test.tsx
docs/: PRD.md  analyst-framework.md  architecture.md  data-sources.md  learning-loop.md  monitoring.md  phase-2-mac-setup.md  qa-runbook.md  roadmap.md  safety-and-disclaimers.md
eval/: hallucination_harness.py
infra/: docker-compose.yml
infra/supabase/: SUPABASE_BUNDLE.sql
infra/supabase/migrations/: 001_init.sql  002_backtest.sql  003_user_extras.sql  004_rls_audit.sql  005_pgvector_rag.sql  006_security_hardening.sql  007_public_reference_reads.sql  008_daily_picks.sql  009_gossip_events.sql  010_wallet_tracker.sql  011_audit_triggers.sql  012_telegram_snooze.sql  013_ta_snapshots.sql  014_user_risk_profile.sql  015_user_ui_prefs.sql  016_security_hardening_advisors.sql  017_meter_ticks.sql  018_paper_trading.sql  019_pick_outcomes_and_perf.sql  020_options_snapshots.sql
skills/alert-tuner/: SKILL.md
skills/backtest-eval/: SKILL.md
skills/backtest-runner/: SKILL.md
skills/crypto-research/: SKILL.md
skills/macro-overlay/: SKILL.md
skills/pattern-detector/: SKILL.md
skills/thesis-tracker/: SKILL.md
skills/token-brief/: SKILL.md
(+18 files in other folders)
