[project]
name = "tradingai-api"
version = "0.1.0"
description = "TradingAI backend — AI broker assistant for crypto research, alerts, and decision support."
authors = [{ name = "TradingAI" }]
requires-python = ">=3.12"
readme = "../../README.md"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "anthropic>=0.39.0",
    "openai>=1.54.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "ccxt>=4.4.0",
    "arq>=0.26.0",
    "redis>=5.2.0",
    "python-telegram-bot>=21.7",
    "python-multipart>=0.0.17",
    "supabase>=2.10.0",
    "tomli>=2.0.0",
    # technical analysis + backtest stack
    "pandas>=2.2.3",
    "numpy>=2.0.0",
    "pandas-ta>=0.3.14b",       # ~150 indicators incl. candlestick patterns
    "scipy>=1.14.0",            # peak-finding for chart patterns
    "matplotlib>=3.9.0",        # backtest report visuals
    "jinja2>=3.1.4",            # HTML report templating
    "sentry-sdk[fastapi]>=2.18.0",  # error reporting
    "lightgbm>=4.5.0",          # ML predictor (gradient-boosted trees)
    "scikit-learn>=1.5.0",      # cross-validation + metrics
    "websockets>=13.1",         # Binance trade-stream worker
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.4",
    "mypy>=1.13.0",
    "types-requests",
    "respx>=0.21.1",
]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "C4", "RET", "SIM", "ASYNC"]
ignore = ["E501", "S101"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
