[project]
name = "tradingai-api"
version = "0.1.0"
description = "TradingAI backend — AI broker assistant for crypto research, alerts, and decision support."
authors = [{ name = "TradingAI" }]
requires-python = ">=3.12"
readme = "../../README.md"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "anthropic>=0.39.0",
    "openai>=1.54.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "ccxt>=4.4.0",
    "arq>=0.26.0",
    "redis>=5.2.0",
    "python-telegram-bot>=21.7",
    "python-multipart>=0.0.17",
    "supabase>=2.10.0",
    "tomli>=2.0.0",
    # technical analysis + backtest stack
    "pandas>=2.2.3",
    "numpy>=2.0.0",
    "pandas-ta>=0.3.14b",       # ~150 indicators incl. candlestick patterns
    "scipy>=1.14.0",            # peak-finding for chart patterns
    "matplotlib>=3.9.0",        # backtest report visuals
    "jinja2>=3.1.4",            # HTML report templating
    "sentry-sdk[fastapi]>=2.18.0",  # error reporting
    "lightgbm>=4.5.0",          # ML predictor (gradient-boosted trees)
    "scikit-learn>=1.5.0",      # cross-validation + metrics
    "websockets>=13.1",         # Binance trade-stream worker
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.4",
    "mypy>=1.13.0",
    "types-requests",
    "respx>=0.21.1",
]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "C4", "RET", "SIM", "ASYNC"]
# Narrow ignores for intentional patterns we don't want lint to fight:
#   E501  — line length, formatter-managed
#   E701/E702/E731 — single-line idioms used in stub providers + small lambdas
#   S101  — assert-based tests
#   S104  — uvicorn dev binds 0.0.0.0 (intentional)
#   S105/S106/S107 — false positives on test fixtures with literals like "dev"
#   S110/S112 — try/except pass/continue is the dominant best-effort pattern
#               used by audit logging, telemetry fan-outs, and graceful
#               degradation. Adopting it everywhere is cleaner than per-line
#               noqa comments.
#   S301  — pickle.load on trained models we wrote ourselves
#   S608  — false positive: repos build WHERE clauses dynamically but pass
#           values via positional asyncpg placeholders ($1, $2, …)
#   B008  — `Depends(...)` default-arg pattern used by FastAPI
#   N806  — dataclasses sometimes use upper-case constants in scope
#   N818  — our exception names follow `…Open`, `…Exceeded`, etc.
#   C408/C416 — minor stylistic
ignore = [
    "E501", "E701", "E702", "E731", "E741", "E402",
    "S101", "S104", "S105", "S106", "S107", "S110", "S112", "S301", "S608",
    "B008",
    "N806", "N818",
    "C408", "C416",
    "SIM102", "SIM105", "SIM108",  # stylistic; we have explicit reasons for each
]

[tool.ruff.lint.per-file-ignores]
# Tests are allowed to be loose: fixtures look unused, imports look unused
# but ARE used by pytest discovery, lambda-style stubs, etc.
"tests/**" = ["F401", "F841", "ARG001", "ARG002", "B007", "E402", "E741"]
"app/agents/llm_provider.py" = ["F841"]   # tenacity attempt-loop assigns unused
"app/services/scoring.py" = ["E741"]      # `l`/`s` in trader-style helper names

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
